--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
     <div id="controls" class="h-100 w-25">
         <label class="w-100">
             Light:
-            <select name="lights" class="form-control form-control-sm w-100" v-model="light.active">
-                <option v-for="(color, light) in lights">
-                    Light {{ light.substr(-1) }}
+            <select name="lights" class="form-control form-control-sm w-100">
+                <option v-for="(light, index) in lights">
+                    Light {{ index.substr(-1) }}
                 </option>
             </select>
         </label>
